# swarm_commons

./: Cargo.toml  README.md
agent_core/: Cargo.toml
agent_core/src/: lib.rs
agent_core/src/agent_interaction_protocol/: a2a_agent_interaction.rs  agent_interaction.rs  mod.rs
agent_core/src/business_logic/: agent.rs  mcp_runtime.rs  mod.rs  services.rs
agent_core/src/llm_interaction/: llm_client.rs
agent_core/src/server/: agent_handler.rs  agent_server.rs  mod.rs  secure_agent_server.rs
agent_models/: Cargo.toml
agent_models/src/: lib.rs
agent_models/src/evaluation/: evaluation_models.rs  mod.rs
agent_models/src/execution/: execution_result.rs  mod.rs
agent_models/src/factory/: config.rs
agent_models/src/graph/: graph_definition.rs  high_level_plan_definition.rs  mod.rs
agent_models/src/memory/: mod.rs
agent_models/src/registry/: mod.rs  registry_models.rs
configuration/: Cargo.toml  agent_basic_config.toml  agent_executor_config.toml  agent_planner_config.toml
configuration/src/: lib.rs
llm_api/: Cargo.toml
llm_api/src/: chat.rs  tools.rs
