[package]
name = "agent_core"
version = "0.1.0"
edition = "2024"

# Should contain all traits

[lib]
crate-type = ["rlib"]

[dependencies]
agent_models={ workspace = true }
llm_api = { workspace = true }
configuration = { workspace = true }


a2a-rs = { workspace = true }


axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

reqwest = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
chrono={ workspace = true }


toml = { workspace = true }

thiserror = { workspace = true }