[package]
name = "llm_api"
version = "0.1.0"
edition = "2024"

[lib]
#crate-type = ["dylib", "rlib"]
crate-type = ["rlib"]

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
regex = { workspace = true }

# Logging - optional
tracing = { workspace = true }
tracing-subscriber = { workspace = true}